Fix index page rendering on mobile

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -306,7 +306,6 @@ main {
 #header-promo-200620-header, #header-short-header {
     font-size: 64px;
     font-weight: bold;
-    width: max-content;
 }
 
 #header-promo-200620-header {
